--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -52,6 +52,7 @@
 @import 'layout/nav';
 @import 'layout/stats';
 @import 'layout/gym-details';
+@import 'layout/pokestop-details';
 @import 'layout/banner';
 @import 'layout/main';
 @import 'layout/footer';
