--- a/static/sass/layout/_pokestop-details.scss
+++ b/static/sass/layout/_pokestop-details.scss
@@ -121,165 +121,6 @@
       vertical-align: middle;
     }
 
-    .ivs {
-      color: rgb(93,109,126);
-      float:left;
-
-      .iv {
-        text-align: center;
-        width: 20px;
-        display: inline-block;
-      }
-
-      .type {
-        font-size: .5em;
-        line-height:1em;
-      }
-
-      .value {
-        font-family: 'Open Sans', sans-serif;
-        font-weight: bold;
-      }
-    }
-
-    .moves {
-      line-height: 1em;
-      color: rgb(93,109,126);
-      font-size: .8em;
-      // float: right;
-
-      // .move {
-      //   display: block;
-      // }
-
-      // .move:after {
-      //   content: "";
-      //   display: table;
-      //   clear: both;
-      // }
-
-      .move {
-        .name {
-          float: left;
-          clear: left;
-
-          .move-bar-sprite {
-            margin-top: 2px;
-          }
-        }
-
-        .type {
-          margin-top: 2px;
-          font-size: 9px;
-          display: inline-block;
-          text-transform: uppercase;
-          padding: 2px 3px;
-          border-radius: 4px;
-          color: white;
-          font-family: 'Open Sans', sans-serif;
-          font-weight: 300;
-
-
-          &.fairy {
-              background-color: #e898e8;
-              // color: _get_text_color(#e898e8);
-          }
-
-          &.ghost {
-              background-color: #705898;
-              // color: _get_text_color(#705898);
-          }
-
-          &.normal {
-              background-color: #8a8a59;
-              // color: _get_text_color(#8a8a59);
-          }
-
-          &.grass {
-              background-color: #78c850;
-              // color: _get_text_color(#78c850);
-          }
-
-          &.water {
-              background-color: #6890f0;
-              // color: _get_text_color(#6890f0);
-          }
-
-          &.bug {
-              background-color: #a8b820;
-              // color: _get_text_color(#a8b820);
-          }
-
-          &.fighting {
-              background-color: #c03028;
-              // color: _get_text_color(#c03028);
-          }
-
-          &.electric {
-              background-color: #f8d030;
-              // color: _get_text_color(#f8d030);
-          }
-
-          &.rock {
-              background-color: #b8a038;
-              // color: _get_text_color(#b8a038);
-          }
-
-          &.fire {
-              background-color: #f08030;
-              // color: _get_text_color(#f08030);
-          }
-
-          &.flying {
-              background-color: #a890f0;
-              // color: _get_text_color(#a890f0);
-          }
-
-          &.ice {
-              background-color: #98d8d8;
-              // color: _get_text_color(#98d8d8);
-          }
-
-          &.ground {
-              background-color: #e0c068;
-              // color: _get_text_color(#e0c068);
-          }
-
-          &.steel {
-              background-color: #b8b8d0;
-              // color: _get_text_color(#b8b8d0);
-          }
-
-          &.dragon {
-              background-color: #7038f8;
-              // color: _get_text_color(#7038f8);
-          }
-
-          &.poison {
-              background-color: #a040a0;
-              // color: _get_text_color(#a040a0);
-          }
-
-          &.psychic {
-              background-color: #f85888;
-              // color: _get_text_color(#f85888);
-          }
-          &.dark {
-              background-color: #705848;
-          }
-        }
-      }
-
-      .damage {
-        @media screen and (max-width: 480px) {
-          margin-right: 2px !important;
-        }
-        float: right;
-        margin-top: 5px;
-        font-family: 'Open Sans', sans-serif;
-      }
-    }
-
     tbody {
       tr {
         background-color: inherit;
@@ -306,7 +147,7 @@
       }
     }
 
-    .gym {
+    .pokestop {
       @media screen and (max-width: 480px) {
         font-size: 10px !important;
       }
@@ -341,15 +182,6 @@
         height: 96px;
         width: 96px;
 
-        &.pokemon {
-          @media screen and (max-width: 480px) {
-            height: 30px !important;
-            width: 30px !important;
-          }
-          display: block;
-          height: 48px;
-          width: 48px;
-        }
       }
 
       &.info {
@@ -381,245 +213,13 @@
           -webkit-font-smoothing: antialiased;
         }
 
-        &.strength {
-          @media screen and (max-width: 480px) {
-            height: 12px !important;
-            width: 12px !important;
-          }
-          font-weight: 900;
-          height: 16px;
-          width: 16px;
-          vertical-align: middle;
-        }
       }
 
       &.pokemon {
         font-size: 12px;
         line-height: 1rem;
 
-        &.motivation.decayed:before {
-          content: '\f004';
-          display: inline-block;
-          font-family: FontAwesome;
-          width: 24px;
-          -webkit-font-smoothing: antialiased;
-        }
-
-        &.motivation.decayed {
-          @media screen and (max-width: 480px) {
-            font-size: 9px !important;
-          }
-          font-weight: 900;
-          font-size: 16px;
-          white-space: nowrap;
-          &.zone {
-            &.good {
-              color: rgba(16,155,49,1);
-            }
-            &.average {
-              color: rgba(235,193,26,1);
-            }
-            &.bad {
-              color: rgba(255,25,25,1);
-            }
-          }
-        }
-
-        &.motivation.cp:before {
-          color: #fc6fb0;
-          content: '\f004';
-          display: inline-block;
-          font-family: FontAwesome;
-          width: 12px;
-          -webkit-font-smoothing: antialiased;
-        }
-
-        &.motivation.cp {
-          @media screen and (max-width: 480px) {
-            font-size: 8px !important;
-          }
-          color: #000;
-          font-size: 10px;
-          font-weight: 500;
-          text-align: inherit;
-          white-space: nowrap;
-        }
       }
     }
 
-    .raid {
-      @media screen and (max-width: 480px) {
-        font-size: 10px !important;
-      }
-      @media screen and (max-width: 320px) {
-        font-size: 9px !important;
-      }
-      color: rgb(93,109,126);
-      font-size: 14px;
-      font-weight: 900;
-      @media screen and (max-width: 480px) {
-        margin-bottom: 0px !important;
-      }
-      margin-bottom: 5px;
-
-      &.container {
-        display: flex;
-        justify-content: center;
-
-        &.content-left {
-          @media screen and (max-width: 480px) {
-            width: 64px !important;
-          }
-          width:96px;
-        }
-
-        &.content-right {
-          margin-bottom: auto;
-          margin-top: auto;
-        }
-      }
-
-      &.countdown {
-
-        &:before {
-          @media screen and (max-width: 480px) {
-            margin: 0px -2px 0px -2px !important;
-          }
-          content: '\f017';
-          display: inline-block;
-          font-family: FontAwesome;
-          margin: 0px 2px 0px 0px;
-          height: 16px;
-          width: 16px;
-          -webkit-font-smoothing: antialiased;
-        }
-      }
-
-      &.pokemon {
-        font-size: 16px;
-        font-weight: 900;
-        float: left;
-      }
-
-      .move {
-        .name {
-          @media screen and (max-width: 480px) {
-            font-size: 10px !important;
-            margin: 0px 0px 2px 0px !important;
-          }
-          @media screen and (max-width: 320px) {
-            font-size: 9px !important;
-          }
-          font-size: 14px;
-          float: left;
-          clear: left;
-          margin: 0px 5px 5px 10px
-        }
-        @media screen and (max-width: 480px) {
-          font-size: 6px !important;
-        }
-        .type {
-          @media screen and (max-width: 480px) {
-            font-size: 6px !important;
-            margin: 0px 0px 2px 0px !important;
-          }
-          margin: 0px 0px 5px 0px;
-          font-size: 10px;
-          padding: 0px 5px;
-          border-radius: 4px;
-          color: white;
-          float: right;
-          clear: right;
-
-
-          &.fairy {
-              background-color: #e898e8;
-              // color: _get_text_color(#e898e8);
-          }
-
-          &.ghost {
-              background-color: #705898;
-              // color: _get_text_color(#705898);
-          }
-
-          &.normal {
-              background-color: #8a8a59;
-              // color: _get_text_color(#8a8a59);
-          }
-
-          &.grass {
-              background-color: #78c850;
-              // color: _get_text_color(#78c850);
-          }
-
-          &.water {
-              background-color: #6890f0;
-              // color: _get_text_color(#6890f0);
-          }
-
-          &.bug {
-              background-color: #a8b820;
-              // color: _get_text_color(#a8b820);
-          }
-
-          &.fighting {
-              background-color: #c03028;
-              // color: _get_text_color(#c03028);
-          }
-
-          &.electric {
-              background-color: #f8d030;
-              // color: _get_text_color(#f8d030);
-          }
-
-          &.rock {
-              background-color: #b8a038;
-              // color: _get_text_color(#b8a038);
-          }
-
-          &.fire {
-              background-color: #f08030;
-              // color: _get_text_color(#f08030);
-          }
-
-          &.flying {
-              background-color: #a890f0;
-              // color: _get_text_color(#a890f0);
-          }
-
-          &.ice {
-              background-color: #98d8d8;
-              // color: _get_text_color(#98d8d8);
-          }
-
-          &.ground {
-              background-color: #e0c068;
-              // color: _get_text_color(#e0c068);
-          }
-
-          &.steel {
-              background-color: #b8b8d0;
-              // color: _get_text_color(#b8b8d0);
-          }
-
-          &.dragon {
-              background-color: #7038f8;
-              // color: _get_text_color(#7038f8);
-          }
-
-          &.poison {
-              background-color: #a040a0;
-              // color: _get_text_color(#a040a0);
-          }
-
-          &.psychic {
-              background-color: #f85888;
-              // color: _get_text_color(#f85888);
-          }
-          &.dark {
-              background-color: #705848;
-          }
-        }
-      }
-    }
   }
