--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>RocketMapPlusPlus - Statistics</title>
+    <title>{{mapname}} - Statistics</title>
 
     <!-- Fav- & Apple-Touch-Icons -->
     <!-- Favicon -->
@@ -38,7 +38,7 @@
         <!-- Header -->
         <header id="header">
           <a href="#nav"><span class="label">Options</span></a>
-          <h1><a href="./">RocketMapPlusPlus<img class='rocket icon' src='static/images/rocket.png'></a></h1>
+          <h1><a href="./">{{mapname}}<img class='rocket icon' src='static/images/rocket.png'></a></h1>
           <a href="status" target="_blank" style="float: right;"><span class="label">Status</span></a>
         </header>
         <nav id="nav">
