--- a/static/sass/layout/_gym.scss
+++ b/static/sass/layout/_gym.scss
@@ -35,6 +35,25 @@
     }
   }
 
+  &.img {
+    width: 96px;
+    border-radius: 48px;
+    height: 96px;
+    margin-top: 10px;
+    &.uncontested {
+      border: 5px solid rgba(85,85,85,1);
+    }
+    &.mystic {
+      border: 5px solid rgba(0,134,255,1);
+    }
+    &.valor {
+      border: 5px solid rgba(255,26,26,1);
+    }
+    &.instinct {
+      border: 5px solid rgba(255,159,25,1);
+    }
+  }
+
   &.sprite {
     display: block;
     height: 64px;
