--- a/static/sass/layout/_pokestop-details.scss
+++ b/static/sass/layout/_pokestop-details.scss
@@ -182,6 +182,10 @@
         height: 96px;
         width: 96px;
 
+        &.img {
+            border-radius: 48px;
+            border: 5px solid rgb(29, 139, 240);
+        }
       }
 
       &.info {
