--- a/static/sass/layout/_gym-details.scss
+++ b/static/sass/layout/_gym-details.scss
@@ -332,6 +332,26 @@
         text-decoration: underline;
       }
 
+      &.img {
+        display: inline;
+        width: 96px;
+        border-radius: 48px;
+        height: 96px;
+        margin-top: 10px;
+        &.uncontested {
+          border: 5px solid rgba(85,85,85,1);
+        }
+        &.mystic {
+          border: 5px solid rgba(0,134,255,1);
+        }
+        &.valor {
+          border: 5px solid rgba(255,26,26,1);
+        }
+        &.instinct {
+          border: 5px solid rgba(255,159,25,1);
+        }
+      }
+
       &.sprite {
         @media screen and (max-width: 480px) {
           height: 48px !important;
