--- a/static/sass/layout/_gym.scss
+++ b/static/sass/layout/_gym.scss
@@ -36,22 +36,7 @@
   }
 
   &.img {
-    width: 96px;
-    border-radius: 48px;
-    height: 96px;
-    margin-top: 10px;
-    &.uncontested {
-      border: 5px solid rgba(85,85,85,1);
-    }
-    &.mystic {
-      border: 5px solid rgba(0,134,255,1);
-    }
-    &.valor {
-      border: 5px solid rgba(255,26,26,1);
-    }
-    &.instinct {
-      border: 5px solid rgba(255,159,25,1);
-    }
+    display: none;
   }
 
   &.sprite {
