--- a/static/sass/layout/_pokestop-details.scss
+++ b/static/sass/layout/_pokestop-details.scss
@@ -185,6 +185,7 @@
         &.img {
             border-radius: 48px;
             border: 5px solid rgb(29, 139, 240);
+            margin-top: 10px;
         }
       }
 
