--- a/static/sass/layout/_pokestop-details.scss
+++ b/static/sass/layout/_pokestop-details.scss
@@ -173,6 +173,20 @@
         text-decoration: underline;
       }
 
+      &.quest {
+        margin: 10px 10px 0 10px;
+      }
+
+      &.img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        height: 96px;
+        width: 96px;
+        border-radius: 48px;
+        border: 5px solid rgb(29, 139, 240);
+        margin-top: 10px;
+      }
       &.sprite {
         @media screen and (max-width: 480px) {
           height: 48px !important;
@@ -184,12 +198,6 @@
 
         &.pokestop-icon {
             display: none;
-        }
-
-        &.img {
-            border-radius: 48px;
-            border: 5px solid rgb(29, 139, 240);
-            margin-top: 10px;
         }
       }
 
