--- a/static/sass/layout/_pokestop.scss
+++ b/static/sass/layout/_pokestop.scss
@@ -14,6 +14,28 @@
     margin-bottom: 5px;
   }
 
+  &.quest {
+    border: 1px solid #c4c4c4;
+    margin: 5px 0 5px 0;
+    border-radius: 4px;
+    display: flex;
+    padding: 0 10px 0 5px;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    .quest-icon {
+      height: 48px;
+      width: 48px;
+    }
+
+    .quest-text {
+      word-break: break-all;
+      text-decoration: none;
+      font-size: 12px;
+      color: #5d6d7e;
+    }
+  }
+
   &.navigate {
     color: rgb(93,109,126);
     font-size: 11px;
@@ -70,6 +92,6 @@ a.pokestop:link {
   margin-right: auto;
 }
 
-.pokestop.img.sprite {
+.pokestop.img {
   display: none;
 }
