[ADD] add switch to enable geofences to map template

--- a/templates/map.html
+++ b/templates/map.html
@@ -232,6 +232,18 @@
                 </label>
               </div>
             </div>
+              {% if show.geofences %}
+            <div class="form-control switch-container">
+              <h3>Geofences</h3>
+              <div class="onoffswitch">
+                <input id="geofences-switch" type="checkbox" name="geofences-switch" class="onoffswitch-checkbox">
+                <label class="onoffswitch-label" for="geofences-switch">
+                <span class="switch-label" data-on="On" data-off="Off"></span>
+                <span class="switch-handle"></span>
+                </label>
+              </div>
+            </div>
+              {% endif %}
               {% if show.pokemons %}
             <div class="form-control">
               <label for="exclude-pokemon">
