--- a/static/sass/layout/_pokestop.scss
+++ b/static/sass/layout/_pokestop.scss
@@ -2,7 +2,44 @@
   font-size: 14px;
   font-weight: 900;
   text-align: center;
-  text-decoration: underline;
+
+  &.container {
+    display: grid;
+    justify-content: center;
+  }
+
+  &.info {
+    color: rgb(93,109,126);
+    font-size: 11px;
+    font-weight: 500;
+    text-align: left;
+    &.last-modified:before {
+      content: '\f040';
+      display: inline-block;
+      font-family: FontAwesome;
+      height: 16px;
+      width: 16px;
+      -webkit-font-smoothing: antialiased;
+    }
+
+    &.last-scanned:before {
+      content: '\f002';
+      display: inline-block;
+      font-family: FontAwesome;
+      height: 16px;
+      width: 16px;
+      -webkit-font-smoothing: antialiased;
+    }
+
+    &.navigate:before {
+      content: '\f018';
+      display: inline-block;
+      font-family: FontAwesome;
+      height: 16px;
+      width: 16px;
+      -webkit-font-smoothing: antialiased;
+    }
+  }
 
   &.lure {
     color: rgb(249,53,133);
