--- a/templates/map.html
+++ b/templates/map.html
@@ -413,6 +413,10 @@
             <center><h1 id="stats-pkstop-label"></h1></center>
           </div>
           <div id="pokestopList" style="color: black;"></div>
+          <div class="stats-label-container">
+            <center><h1 id="stats-dw-label"></h1></center>
+          </div>
+          <div id="deviceworkerList" style="color: black;"></div>
         </div>
       </nav>
       <nav id="gym-details">
