add deviceworker marker and label.

--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -59,5 +59,6 @@
 @import 'layout/gym';
 @import 'layout/pokestop';
 @import 'layout/pokemon';
+@import 'layout/deviceworker';
 
 @import 'move-bar-sprite.scss';
