--- a/templates/map.html
+++ b/templates/map.html
@@ -46,6 +46,7 @@
         <a href="#nav"><span class="label">Options</span></a>
         <h1><a href="./">{{mapname}}<img class='rocket icon' src='static/images/rocket.png'></a></h1>
         <a href="#stats" id="statsToggle" class="statsNav" style="float: right;"><span class="label">Stats</span></a>
+        <a href="auth_logout" style="float: right;"><span class="label">Log-Out</span></a>
       </header>
       <!-- NAV -->
       <nav id="nav">
