--- a/static/sass/layout/_pokestop.scss
+++ b/static/sass/layout/_pokestop.scss
@@ -59,6 +59,24 @@
     margin-bottom: 5px;
   }
 
+  &.active-pokemon {
+    margin-left: auto;
+    margin-right: auto;
+
+    &.pokemon-background {
+      background-image:url(/static/images/lure_petals.png);
+      width: 48px;
+      height: 48px;
+    }
+    &.pokemon {
+      position: relative;
+      left: 8px;
+      top: 8px;
+      width: 32px;
+      height: 32px;
+    }
+  }
+
   &.members {
     display: block;
     margin-bottom: 5px;
@@ -155,6 +173,24 @@
     font-family: FontAwesome;
     height: 16px;
     width: 16px;
+    text-align: center;
+    -webkit-font-smoothing: antialiased;
+  }
+}
+
+.active-pokemon-expire {
+  color: rgb(249,53,133);
+  font-size: 11px;
+  font-weight: 500;
+  text-align: center;
+
+  &:before {
+    color: rgb(93,109,126);
+    content: '\f017';
+    display: inline-block;
+    font-family: FontAwesome;
+    height: 14px;
+    width: 14px;
     text-align: center;
     -webkit-font-smoothing: antialiased;
   }
