--- a/static/sass/layout/_gym.scss
+++ b/static/sass/layout/_gym.scss
@@ -83,6 +83,28 @@
     }
   }
 
+  &.eggtimerlabel {
+    background: rgba(255, 192, 203, 1) none repeat scroll 0% 0%;
+    padding: 1px 4px 0px 4px;
+    border-radius: 25px;
+    font-size: 11px;
+    font-weight: 500;
+    color: #ffffff;
+    position: absolute;
+    z-index: 1000 !important;
+  }
+  
+  &.raidtimerlabel {
+    background: rgba(255,140,0 ,1) none repeat scroll 0% 0%;
+    padding: 1px 4px 0px 4px;
+    border-radius: 25px;
+    font-size: 11px;
+    font-weight: 500;
+    color: #ffffff;
+    position: absolute;
+    z-index: 1000 !important;
+  }
+
   &.pokemon {
     @media screen and (max-width: 320px) {
       font-size: 8px !important;
