--- a/templates/map.html
+++ b/templates/map.html
@@ -224,6 +224,7 @@
                 </label>
               </div>
             </div>
+              {% if show.devices %}
             <div class="form-control switch-container">
               <h3>Show Devices</h3>
               <div class="onoffswitch">
@@ -246,6 +247,7 @@
                 </div>
               </div>
             </div>
+              {% endif %}
             <div class="form-control switch-container">
               <h3>Spawn Points</h3>
               <div class="onoffswitch">
