--- a/templates/devices.html
+++ b/templates/devices.html
@@ -34,11 +34,14 @@
                  <th>Scans</th>
                  <th>Scanning</th>
                  <th>Fetching</th>
+                 <th>Location</th>
+                 <th>New Location</th>
              </tr>
         </thead>
         <tbody>
         </tbody>
     </table>
+
     <!-- Load JS libs before custom scripts. -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
