[UPDATE] update to quest page

--- a/static/sass/quests.scss
+++ b/static/sass/quests.scss
@@ -12,7 +12,7 @@ button {
 }
 
 #quest {
-  background-image: url('static/images/searchicon.png');
+  background-image: url('../../../images/searchicon.png');
   background-position: 10px 10px;
   background-repeat: no-repeat;
   width: 100%;
