[UPDATE] quest page updates

--- a/templates/quests.html
+++ b/templates/quests.html
@@ -30,9 +30,11 @@
     <table id="myTable">
         <thead>
             <tr class="header">
-                 <th>Pokestop</th>
-                 <th>Last Scanned</th>
-             </tr>
+                <th>Quest Reward</th>
+                <th>Pokestop</th>
+                <th>Pokestop Icon</th>
+                <th>Last Scanned</th>
+            </tr>
         </thead>
         <tbody>
         </tbody>
