[UPDATE] add UI to change endpoint and use this for mapcontrolled endpoint

--- a/templates/devices.html
+++ b/templates/devices.html
@@ -36,6 +36,7 @@
                  <th>Fetching</th>
                  <th>Location</th>
                  <th>New Location</th>
+                 <th>Endpoint</th>
              </tr>
         </thead>
         <tbody>
