Added EX-Raid filter

--- a/templates/raids.html
+++ b/templates/raids.html
@@ -32,7 +32,7 @@
         <button id="3" name="level" class="level inactive" onclick="changeClass(this)">Level 3</button>
         <button id="4" name="level" class="level inactive" onclick="changeClass(this)">Level 4</button>
         <button id="5" name="level" class="level inactive" onclick="changeClass(this)">Level 5</button>
-        <!-- <button id="target" name="target" class="target inactive" onclick="changeClass(this)">EX-Raids</button> -->
+        <button id="exraid" name="exraid" class="exraid inactive" onclick="changeClass(this)">EX-Raids</button>
     </div>
     <table id="myTable">
         <thead>
