--- a/templates/devices.html
+++ b/templates/devices.html
@@ -25,7 +25,7 @@
     <link rel="apple-touch-icon" href="{{ url_for('static', filename='images/appicons/180x180.png').lstrip('/') }}" sizes="180x180">
     <link rel="stylesheet" href="{{ url_for('static', filename='dist/css/devices.min.css').lstrip('/') }}">
 </head>
-<body class="devicesPage" onload="start()">
+<body class="devicesPage"">
     <table id="myTable">
         <thead>
             <tr class="header">
