[UPDATE] no need to login if no device users file is set

--- a/templates/devices.html
+++ b/templates/devices.html
@@ -54,6 +54,10 @@
         </div>
     </div>
 
+    <script>
+      var needlogin = {{needlogin}};
+    </script>
+
     <!-- Load JS libs before custom scripts. -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
