[UPDATE] add lvl 13 cells as well

--- a/templates/map.html
+++ b/templates/map.html
@@ -344,6 +344,16 @@
                 </div>
             </div>
             <div class="form-control switch-container">
+                <h3>Gym area S2Lv13</h3>
+                <div class="onoffswitch">
+                    <input id="s2cellsLv13-switch" type="checkbox" name="ranges-switch" class="onoffswitch-checkbox">
+                    <label class="onoffswitch-label" for="s2cellsLv13-switch">
+                        <span class="switch-label" data-on="On" data-off="Off"></span>
+                        <span class="switch-handle"></span>
+                    </label>
+                </div>
+            </div>
+            <div class="form-control switch-container">
                 <h3>Gym area S2Lv14</h3>
                 <div class="onoffswitch">
                     <input id="s2cellsLv14-switch" type="checkbox" name="ranges-switch" class="onoffswitch-checkbox">
