[UPDATE] remove geofences from db, allow quest page etc to filter on geofence names

--- a/templates/map.html
+++ b/templates/map.html
@@ -550,6 +550,7 @@
       var centerLng = {{lng}};
       var showConfig = {{show|tojson|safe}};
       var generateImages = {{generateImages}};
+      var geofencenames = {{geofences}};
     </script>
     <script src="{{ url_for('static', filename='dist/js/app.min.js').lstrip('/') }}"></script>
     <script src="{{ url_for('static', filename='dist/js/map.common.min.js').lstrip('/') }}"></script>
