--- a/templates/devices.html
+++ b/templates/devices.html
@@ -56,6 +56,7 @@
 
     <script>
       var needlogin = {{needlogin}};
+      var geofencenames = {{geofences}};
     </script>
 
     <!-- Load JS libs before custom scripts. -->
