--- a/templates/quests.html
+++ b/templates/quests.html
@@ -25,7 +25,7 @@
     <link rel="apple-touch-icon" href="{{ url_for('static', filename='images/appicons/180x180.png').lstrip('/') }}" sizes="180x180">
     <link rel="stylesheet" href="{{ url_for('static', filename='dist/css/quests.min.css').lstrip('/') }}">
 </head>
-<body class="questsPage" onload="start()">
+<body class="questsPage">
     <input type="text" id="quest" onkeyup="applyFilter()" placeholder="Search for pokestop or quest.." title="Type in a pokestop or quest">
     <table id="myTable">
         <thead>
@@ -39,6 +39,9 @@
         <tbody>
         </tbody>
     </table>
+    <script>
+      var geofencenames = {{geofences}};
+    </script>
     <!-- Load JS libs before custom scripts. -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
