--- a/templates/raids.html
+++ b/templates/raids.html
@@ -25,7 +25,7 @@
     <link rel="apple-touch-icon" href="{{ url_for('static', filename='images/appicons/180x180.png').lstrip('/') }}" sizes="180x180">
     <link rel="stylesheet" href="{{ url_for('static', filename='dist/css/raids.min.css').lstrip('/') }}">
 </head>
-<body class="raidsPage" onload="start()">
+<body class="raidsPage">
     <div align="center">
         <button id="1" name="level" class="level inactive" onclick="changeClass(this)">Level 1</button>
         <button id="2" name="level" class="level inactive" onclick="changeClass(this)">Level 2</button>
@@ -45,6 +45,9 @@
         <tbody>
         </tbody>
     </table>
+    <script>
+      var geofencenames = {{geofences}};
+    </script>
     <!-- Load JS libs before custom scripts. -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
