[FIX] new attempt to bugfix

--- a/templates/devices.html
+++ b/templates/devices.html
@@ -56,7 +56,7 @@
 
     <script>
       var needlogin = {{needlogin}};
-      var geofencenames = {{geofences}};
+      var geofencenames = '`' + {{geofences}} + '`';
     </script>
 
     <!-- Load JS libs before custom scripts. -->
