[UPDATE] fix js issues

--- a/templates/raids.html
+++ b/templates/raids.html
@@ -46,7 +46,7 @@
         </tbody>
     </table>
     <script>
-      var geofencenames = '`' + {{geofences}} + '`';
+      var geofencenames = {{'`' + geofences + '`'}};
     </script>
     <!-- Load JS libs before custom scripts. -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
