[UPDATE] add google analytics key on subpages and make it configurable

--- a/templates/devices.html
+++ b/templates/devices.html
@@ -57,6 +57,7 @@
     <script>
       var needlogin = {{needlogin}};
       var geofencenames = {{'`' + geofences + '`'}};
+      var analyticsKey = {{'`' + analyticskey + '`'}};
     </script>
 
     <!-- Load JS libs before custom scripts. -->
