--- a/templates/quests.html
+++ b/templates/quests.html
@@ -41,6 +41,7 @@
     </table>
     <script>
       var geofencenames = {{'`' + geofences + '`'}};
+      var analyticsKey = {{'`' + analyticskey + '`'}};
     </script>
     <!-- Load JS libs before custom scripts. -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
