--- a/templates/quests.html
+++ b/templates/quests.html
@@ -41,8 +41,17 @@
     </table>
     <script>
       var geofencenames = {{'`' + geofences + '`'}};
-      var analyticsKey = {{'`' + analyticskey + '`'}};
     </script>
+      {% if usegoogleanalytics %}
+    <script async src="https://www.googletagmanager.com/gtag/js?id={{ analyticskey }}"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', {{'`' + analyticskey + '`'}});
+    </script>
+      {% endif %}
     <!-- Load JS libs before custom scripts. -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
