--- a/templates/map.html
+++ b/templates/map.html
@@ -2,6 +2,18 @@
 <html lang="{{lang}}">
   <head>
     <meta charset="utf-8">
+
+      {% if usegoogleanalytics %}
+    <!-- Google Analytics -->
+    <script>
+      window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+      ga('create', {{'`' + analyticskey + '`'}}, 'auto');
+      ga('send', 'pageview');
+    </script>
+    <script async src='https://www.google-analytics.com/analytics.js'></script>
+    <!-- End Google Analytics -->
+      {% endif %}
+
     <title>{{mapname}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -552,16 +564,6 @@
       var generateImages = {{generateImages}};
       var geofencenames = {{'`' + geofences + '`'}};
     </script>
-      {% if usegoogleanalytics %}
-    <script async src="https://www.googletagmanager.com/gtag/js?id={{ analyticskey }}"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', {{'`' + analyticskey + '`'}});
-    </script>
-      {% endif %}
     <script src="{{ url_for('static', filename='dist/js/app.min.js').lstrip('/') }}"></script>
     <script src="{{ url_for('static', filename='dist/js/map.common.min.js').lstrip('/') }}"></script>
     <!-- Load custom JS before map.js so it can change Store defaults. -->
