--- a/templates/quests.html
+++ b/templates/quests.html
@@ -2,6 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+
+      {% if usegoogleanalytics %}
+    <!-- Google Analytics -->
+    <script>
+      window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+      ga('create', {{'`' + analyticskey + '`'}}, 'auto');
+      ga('send', 'pageview');
+    </script>
+    <script async src='https://www.google-analytics.com/analytics.js'></script>
+    <!-- End Google Analytics -->
+      {% endif %}
+
     <title>{{mapname}} - Quests</title>
 
     <!-- Fav- & Apple-Touch-Icons -->
@@ -42,16 +54,6 @@
     <script>
       var geofencenames = {{'`' + geofences + '`'}};
     </script>
-      {% if usegoogleanalytics %}
-    <script async src="https://www.googletagmanager.com/gtag/js?id={{ analyticskey }}"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', {{'`' + analyticskey + '`'}});
-    </script>
-      {% endif %}
     <!-- Load JS libs before custom scripts. -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
