--- a/templates/map.html
+++ b/templates/map.html
@@ -107,6 +107,16 @@
                   </label>
                 </div>
               </div>
+              <div class="form-control switch-container" id="ex-raid-raids-only-wrapper">
+                <h3>Ex Raid Gyms Raids only</h3>
+                <div class="onoffswitch">
+                  <input id="ex-raid-raids-only-switch" type="checkbox" name="ex-raid-raids-only-switch" class="onoffswitch-checkbox" checked>
+                  <label class="onoffswitch-label" for="ex-raid-raids-only-switch">
+                  <span class="switch-label" data-on="On" data-off="Off"></span>
+                  <span class="switch-handle"></span>
+                  </label>
+                </div>
+              </div>
               <div class="form-control switch-container" id="min-raid-level-only-wrapper">
                 <h3>Minimum Raid Level</h3>
                 <select name="raid-min-level-only-switch" id="raid-min-level-only-switch">
